--- a/style.css
+++ b/style.css
@@ -3,7 +3,8 @@ h1 {
   text-align: center
 }
 
- div.pig {
+ div.snail {
   background-color: blue;
   position: sticky;
-  text-align: center;
+   text-align: center;
+}
